<resources>
    <string name="app_name">NU LIRC App</string>
    <string name="email">Email</string>
    <string name="colon"> : </string>
    <string name="clickToContinue">Click to Continue</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="enrollment">Enrollment Number</string>
    <string name="show_password">Show Password</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="nu_at_glance">NU@Glance</string>
    <string name="misc">Miscellaneous</string>
    <string name="issue_return">Issue and Return</string>
    <string name="book_avail">Check Book Availability</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="lib_time">Library Timing</string>
    <string name="circulation_time">Circulation Timing</string>
    <string name="admin_login">Admin Login</string>
    <string name="click_admin">Administrator Login</string>

    <string name="links">Quick Links</string>
    <string name="title_activity_quick_links">QuickLinks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_logout">Logout</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="sign_up"> Sign Up</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="member">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="description">NU Logo</string>
</resources>
