<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_glance"
            android:title="@string/nu_at_glance" />

        <item
            android:id="@+id/nav_issue_return"
            android:title="@string/issue_return" />

        <item
            android:id="@+id/nav_book"
            android:title="@string/book_avail" />

        <item
            android:id="@+id/nav_new_arrivals"
            android:title="@string/new_arrivals" />

    </group>

    <item android:title="@string/misc">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>
