<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".QuickLinks"
    tools:showIn="@layout/app_bar_quick_links">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/issueReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/issue_return"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/bookAvail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/book_avail"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lib_timings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/lib_time"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/circTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/circulation_time"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/newArrivals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/new_arrivals"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>